test_outputs/connlist/nad_test_2_connlist_output.txt
Permitted connectivity analyzed in Pod network:
0.0.0.0-255.255.255.255[External] => default/vm-client[VirtualMachine] : All Connections
0.0.0.0-255.255.255.255[External] => default/vm-server[VirtualMachine] : All Connections
default/vm-client[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
default/vm-client[VirtualMachine] => default/vm-server[VirtualMachine] : All Connections
default/vm-server[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
default/vm-server[VirtualMachine] => default/vm-client[VirtualMachine] : All Connections

Permitted connectivity analyzed in secondary NAD flat12:
default/vm-client[VirtualMachine] => default/vm-server[VirtualMachine] : All Connections
default/vm-server[VirtualMachine] => default/vm-client[VirtualMachine] : All Connections

Workload-to-Networks Mapping:
default/vm-client[VirtualMachine]: 
	Primary Network: pod_network
	Secondary Networks: flat12[NAD]
default/vm-server[VirtualMachine]: 
	Primary Network: pod_network
	Secondary Networks: flat12[NAD]
